feat: change admin settings texts and change "view more" icon

--- a/public/css/prPracaAdmin.css
+++ b/public/css/prPracaAdmin.css
@@ -1,6 +1,7 @@
 
 #prPraca {}
     #prPraca h2 { line-height: 50px; font-weight: 500; font-size: 23px; color: #464646; }
+    #prPraca h4 { margin-bottom: 5px; }
     #prPraca .cf:after { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
     * html #prPraca .cf             { zoom: 1; } /* IE6 */
     *:first-child+html #prPraca .cf { zoom: 1; } /* IE7 */
